unpackaged/main/default/objects/litify_ext__Intake_to_Matter__mdt/litify_ext__Intake_to_Matter__mdt.object-meta.xml
<CustomObject>
    <label>Intake to Matter</label>
    <pluralLabel>Intake to Matter</pluralLabel>
</CustomObject>