unpackaged/main/default/objects/litify_ext__Intake_to_Matter__mdt/fields/litify_ext__Intake_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Intake_Field__c</fullName>
    <description>Intake Field Api Name</description>
    <label>Intake Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>