unpackaged/main/default/objects/litify_ext__Intake_to_Matter__mdt/fields/litify_ext__Intake_Look_Up__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Intake_Look_Up__c</fullName>
    <label>Intake Look-Up</label>
    <metadataRelationshipControllingField>litify_ext__Intake_to_Matter__mdt.litify_ext__Object_Name__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Intake_to_Matter</relationshipLabel>
    <relationshipName>Intake_to_Matter</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>