unpackaged/main/default/objects/litify_ext__Intake_to_Matter__mdt/fields/litify_ext__Matter_Look_up__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Matter_Look_up__c</fullName>
    <label>Matter Look-up</label>
    <metadataRelationshipControllingField>litify_ext__Intake_to_Matter__mdt.litify_ext__Object_Name__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Intake_to_Matter1</relationshipLabel>
    <relationshipName>Intake_to_Matter1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>