unpackaged/main/default/objects/litify_ext__Intake_to_Matter__mdt/fields/litify_ext__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Object_Name__c</fullName>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Intake_to_Matter</relationshipLabel>
    <relationshipName>Intake_to_Matter</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>