unpackaged/main/default/objects/litify_ext__Intake_to_Matter__mdt/fields/litify_ext__Type__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>