unpackaged/main/default/objects/litify_ext__Intake_to_Matter__mdt/validationRules/litify_ext__Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_ext__Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(litify_ext__Type__c, &#39;Field&#39;),
				OR(ISBLANK(litify_ext__Intake_Field__c), 
							ISBLANK(litify_ext__Matter_Field__c)
						)
				)</errorConditionFormula>
    <errorMessage>Intake Field &amp; Matter Field required</errorMessage>
</ValidationRule>