unpackaged/main/default/objects/litify_ext__Intake_to_Matter__mdt/validationRules/litify_ext__Object_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_ext__Object_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	ISPICKVAL(litify_ext__Type__c, &#39;Object&#39;), 
	OR(
		ISBLANK(litify_ext__Intake_Look_Up__c) ,
		ISBLANK(litify_ext__Matter_Look_up__c) ,
		ISBLANK(litify_ext__Object_Name__c)
	)
)</errorConditionFormula>
    <errorMessage>Object Name &amp; Intake Look-up &amp; Matter Look-up required</errorMessage>
</ValidationRule>